--- a/Views/Shared/Admin/_LoginLayout.cshtml
+++ b/Views/Shared/Admin/_LoginLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - xuannthulab.net</title>
+    <title>@ViewData["Title"] - ToanDang</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
@@ -12,7 +12,7 @@
     <link href="~/sbadmin/css/sb-admin-2.min.css" rel="stylesheet">
     <style>
         .bg-login-image, .bg-register-image, .bg-password-image {
-            background: black url(https://xuanthulab.net/public/img/logo.png);
+            background: black url(https://drive.google.com/file/d/18pKkOqn8JyT75kJmtSrAtTwQ5vaKQlCU/view?usp=sharing);
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
@@ -34,13 +34,9 @@
                         @RenderBody()
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
-
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
