--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/ResendEmailConfirmationModel/"
 @model ResendEmailConfirmationModel
 @{
     ViewData["Title"] = "Resend email confirmation";
