--- a/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/ResetPasswordConfirmationModel/"
 @model ResetPasswordConfirmationModel
 @{
     ViewData["Title"] = "Reset password confirmation";
