--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/ForgotPassword/"
 @model ForgotPasswordConfirmation
 @{
     ViewData["Title"] = "Forgot password confirmation";
@@ -8,4 +8,3 @@
 <p>
     Please check your email to reset your password.
 </p>
-
