"Begin for Frontend"

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using WEB2
+﻿@using React.AspNet
+@using WEB2
 @using WEB2.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<script src="~/Content/Sample.jsx"></script>
+@Html.ReactInitJavaScript();
