--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,7 @@
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
+        @await Html.PartialAsync("_AdminDropdownMenu.cshtml")
     }
     else {
         <li class="nav-item">
