--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "ĐĂNG NHẬP";
+    ViewData["Title"] = "Đăng nhập";
 }
 
 <h1>@ViewData["Title"]</h1>
