--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,37 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WEB2</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" type="text/css" href="/css/site.css?/Version=1" />
+    <link href="@Url.Content("https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css")" rel="stylesheet" type="text/css" />
+    @RenderSection("Styles", false)
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white topnav">
             <div class="container">
-
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WEB2</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <p class="logo mb-0">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
+                </a>
+                <div class="input-group mb-0" style="width: 45%; padding">
+                    <input type="text" class="form-control" placeholder="Bạn muốn tìm sản phẩm nào ?" aria-label="search" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon1">
+                            <i class='bx bx-search'></i>
+                        </button>
+                    </div>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-                        </li>
-                    </ul>
-                </div>
+                @*                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                            </li>
+                        </ul>
+                    </div>*@
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </nav>
     </header>
+    <div class="sub-nav">
+        <div class="container navbar sub-nav-item">
+            <a class="nav-item" href="/phone"><i class="bi bi-phone-fill"></i> ĐIỆN THOẠI</a>
+            <a class="nav-item" href="/laptop"><i class="bi bi-laptop-fill"></i> LAPTOP</a>
+            <a class="nav-item" href="/tablet"><i class="bi bi-tablet-landscape-fill"></i> TABLET</a>
+            <a class="nav-item" href="/watch"><i class="bi bi-smartwatch"></i> ĐỒNG HỒ</a>
+            <a class="nav-item" href="/sound"><i class="bi bi-earbuds"></i> ÂM THANH</a>
+            <a class="nav-item" href="/accessories"><i class="bi bi-sd-card-fill"></i> PHỤ KIỆN</a>
+            <a class="nav-item" href="/news"><i class="bi bi-newspaper"></i> TIN TỨC</a>
+            <a class="nav-item" href="/showroom"><i class="bi bi-building"></i> SHOWROOM</a>
+        </div>
+    </div>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="py-4">
             @RenderBody()
         </main>
     </div>
@@ -43,7 +67,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - WEB2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+            </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
