--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white topnav">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white topnav">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <p class="logo mb-0">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
@@ -48,7 +48,7 @@
     </header>
     <div class="sub-nav">
         <div class="container navbar sub-nav-item">
-            <a class="nav-item" href="/phone"><i class="bi bi-phone-fill"></i> ĐIỆN THOẠI</a>
+            <a class="nav-item" href="/phone"><i class="bi bi-phone-fill"></i> Điện thoại</a>
             <a class="nav-item" href="/laptop"><i class="bi bi-laptop-fill"></i> LAPTOP</a>
             <a class="nav-item" href="/tablet"><i class="bi bi-tablet-landscape-fill"></i> TABLET</a>
             <a class="nav-item" href="/watch"><i class="bi bi-smartwatch"></i> ĐỒNG HỒ</a>
@@ -67,7 +67,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - WEB2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
+        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
