--- a/Views/Shared/Admin/_LoginLayout.cshtml
+++ b/Views/Shared/Admin/_LoginLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ToanDang</title>
+    <title>@ViewData["Title"] - Zerone.net</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
@@ -12,7 +12,7 @@
     <link href="~/sbadmin/css/sb-admin-2.min.css" rel="stylesheet">
     <style>
         .bg-login-image, .bg-register-image, .bg-password-image {
-            background: black url(https://drive.google.com/file/d/18pKkOqn8JyT75kJmtSrAtTwQ5vaKQlCU/view?usp=sharing);
+            background: black url(https://drive.google.com/file/d/18pKkOqn8JyT75kJmtSrAtTwQ5vaKQlCU/preview);
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
