--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WEB2</title>
+    <title>@ViewData["Title"] - Zerone.vn</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/site.css?/Version=1" />
     <link href="@Url.Content("https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css")" rel="stylesheet" type="text/css" />
@@ -55,7 +55,8 @@
             <a class="nav-item" href="/sound"><i class="bi bi-earbuds"></i> ÂM THANH</a>
             <a class="nav-item" href="/accessories"><i class="bi bi-sd-card-fill"></i> PHỤ KIỆN</a>
             <a class="nav-item" href="/news"><i class="bi bi-newspaper"></i> TIN TỨC</a>
-            <a class="nav-item" href="/showroom"><i class="bi bi-building"></i> SHOWROOM</a>
+            <a class="nav-item" asp-area="" asp-controller="showroom" asp-action="Index"><i class="bi bi-building"></i> SHOWROOM</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
         </div>
     </div>
     <div class="container">
