--- a/Views/Shared/_AdminDropdownMenu.cshtml
+++ b/Views/Shared/_AdminDropdownMenu.cshtml
@@ -16,7 +16,7 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" asp-page="/Role/User" asp-area="Admin">Gán role cho User</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" asp-page="" asp-area="">Trang Quản trị</a>
+        <a class="dropdown-item" asp-page="/Role/User" asp-area="Admin">Trang Quản trị</a>
     </div>
 </li>
 }
