--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WEB2</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/site.css?/Version=1" />
+    @*<link rel="stylesheet" type="text/css" href="/css/site.css?/Version=1" />*@
+    <link href="@Url.Content("/css/site.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css")" rel="stylesheet" type="text/css" />
     @RenderSection("Styles", false)
@@ -17,7 +18,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <p class="logo mb-0">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
                 </a>
-                <div class="input-group mb-0" style="width: 45%; padding">
+                <div class="input-group mb-0" style="width: 45%">
                     <input type="text" class="form-control" placeholder="Bạn muốn tìm sản phẩm nào ?" aria-label="search" aria-describedby="basic-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon1">
@@ -66,8 +67,14 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - WEB2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <h5 class="pt-1">&copy; 2021 - Công ty TNHH Thương mại Zerone</h5>
+            <div class="col-md-3 pt-1">
+                <h5>Thông tin</h5>
+                @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
+                <a href="/about">Giới thiệu</a>
+                <a href="/work">Tuyển dụng</a>
             </div>
+        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
