Layout: 91%, Insert into Category table

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,29 +63,6 @@
                                 </li>
                             </ul>
                         </div>
-                        <div>
-                            <a class="dropdown-item"><strong>MỨC GIÁ</strong></a>
-                            <ul class="nav" style="width:360px">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 1 đến 2 triệu</a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 2 đến 3 triệu</a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 3 đến 4 triệu</a></li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 4 đến 5 triệu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 6 đến 8 triệu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 8 đến 15 triệu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Từ 15 đến 20 triệu</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Trên 20 triệu</a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -142,9 +119,9 @@
                     <a class="nav-link" href="/watch"><i class="bi bi-smartwatch"></i> ĐỒNG HỒ</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
-                            <a class="dropdown-item"><strong>ĐỒNG HỒ</strong></a>
+                            <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 280px;">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Apple Watch</a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Apple</a></li>
                                 <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Samsung</a></li>
                                 <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Garmin</a></li>
                                 <li class="nav-item">
@@ -176,7 +153,7 @@
                     <a class="nav-link" href="/sound"><i class="bi bi-earbuds"></i> ÂM THANH</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
-                            <a class="dropdown-item"><strong>LOA</strong></a>
+                            <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 320px;">
                                 <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Energizer</a></li>
                                 <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">LG</a></li>
@@ -247,9 +224,47 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/accessories"><i class="bi bi-sd-card-fill"></i> PHỤ KIỆN</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div>
+                            <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
+                            <ul class="nav" style="width: 280px;">
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Apple</a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Asus</a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">OPPO</a></li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">LG</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Anker</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Aukey</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Totolink</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Tenda</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Samsung</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Razer</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Belkin</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Xiaomi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Pisen</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">AVA</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
                 <li class="nav-item">
