--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,59 +1,59 @@
 ﻿@page "/register/"
 @model RegisterModel
 @{
-    ViewData["Title"] = "ĐĂNG KÝ TÀI KHOẢN";
+    ViewData["Title"] = "Đăng ký ngay | ";
 }
-
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-6">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Điền thông tin để tạo tài khoản mới.</h4>
+@section Styles {
+    <link href="@Url.Content("/css/areas/identity/pages/accounts/Register.css")" rel="stylesheet" type="text/css" />
+}
+<body>
+    <div class="d-flex flex-row-reverse col-12 pt-xl-5  pb-xl-5">
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" class="register-form">
+            <h5 class="my-3" style="text-align: center">Đăng ký <span style="color: #be1e2d;"> Z-Member</span></h5>
             <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            <div asp-validation-summary="All" class="text-danger "></div>
+            <div class="form-group my-2 mx-3">
                 <label asp-for="Input.UserName"></label>
                 <input asp-for="Input.UserName" class="form-control" />
                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2 mx-3">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2 mx-3">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2 mx-3">
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Đăng ký</button>
+            <button type="submit" class="btn btn-primary my-3 ">Đăng ký</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
-        @if ((Model.ExternalLogins?.Count ?? 0) != 0) {
-            <section>
-                <h4>Sử dụng dịch vụ</h4>
-                <hr />
-                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                    <div>
-                        <p>
-                            @foreach (var provider in Model.ExternalLogins) {
-                                <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                            }
-                        </p>
-                    </div>
-                </form>
-            </section>
-        }
-    </div>
-</div>
+    @*    <div class="col-md-6 col-md-offset-2">
+            @if ((Model.ExternalLogins?.Count ?? 0) != 0) {
+                <section>
+                    <h4>Sử dụng dịch vụ</h4>
+                    <hr />
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins) {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                </section>
+            }
+        </div>*@
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
+</body>
