--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -295,8 +295,10 @@
                 <div class="col-md-3 col-sm6">
                     <p>Chính sách</p>
                     @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách bảo hành</a>
-                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách đổi trả</a>
+                    <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">
+                        Chính sách
+                        <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách đổ bảo hành</a>i trả
+                    </a>
                     <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách vận chuyển</a>
                     <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách bảo mật</a>
                     <a class="nav-item" asp-area="" asp-controller="Home" asp-action="Index">Chính sách trả góp</a>
