--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>@ViewData["Title"] - Trang quản trị</title>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="./images/GoTech.vn_logo.png">
-
+    <link rel="stylesheet" href="~/vendor/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/vendor/owl-carousel/css/owl.theme.default.min.css">
+    <link href="~/vendor/jqvmap/css/jqvmap.min.css" rel="stylesheet">
     <link href="~/css/style.css" rel="stylesheet">
 </head>
 
@@ -36,7 +39,7 @@
         ***********************************-->
         <div class="nav-header">
             <a href="/" class="brand-logo">
-                <img class="logo-abbr" src="~/images/GoTech.vn_logo.png" alt="">
+                <p class="logo">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
             </a>
 
             <div class="nav-control">
@@ -115,12 +118,6 @@
                                         <i class="icon-envelope-open"></i>
                                         <span class="ml-2">Inbox </span>
                                     </a>
-                                    @*
-                                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                            <i class="icon-key"></i>
-                                            <span class="ml-2">Logout </span>
-                                        </a>*@
-
                                     <form id="logoutForm" class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                                         <i class="icon-key"></i>
                                         <button id="logout" class="ml-2 " style="border: none; background-color: white;" type="submit">Logout</button>
@@ -157,7 +154,7 @@
                             <i class="icon icon-app-store"></i><span class="nav-text">Apps</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./app-profile.html">Profile</a></li>
+                            <li><a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
                             <li>
                                 <a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
                                 <ul aria-expanded="false">
@@ -166,7 +163,7 @@
                                     <li><a href="./email-read.html">Read</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./app-calender.html">Calendar</a></li>
+                            <li><a asp-area="Admin" asp-page="/Manage/Calendar">Calendar</a></li>
                         </ul>
                     </li>
                     <li>
@@ -182,96 +179,63 @@
                             <li><a href="./chart-peity.html">Peity</a></li>
                         </ul>
                     </li>
-                    <li class="nav-label">Components</li>
+                    <li class="nav-label">Bảng điều khiển</li>
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-world-2"></i><span class="nav-text">Control Bar</span>
+                            <i class="icon icon-payment"></i><span class="nav-text">Quản lý bán hàng </span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./ui-accordion.html">Accordion</a></li>
-                            <li><a href="./ui-alert.html">Alert</a></li>
-                            <li><a href="./ui-badge.html">Badge</a></li>
-                            <li><a href="./ui-button.html">Button</a></li>
-                            <li><a href="./ui-modal.html">Modal</a></li>
-                            <li><a href="./ui-button-group.html">Button Group</a></li>
-                            <li><a href="./ui-list-group.html">List Group</a></li>
-                            <li><a href="./ui-media-object.html">Media Object</a></li>
-                            <li><a href="./ui-card.html">Cards</a></li>
-                            <li><a href="./ui-carousel.html">Carousel</a></li>
-                            <li><a href="./ui-dropdown.html">Dropdown</a></li>
-                            <li><a href="./ui-popover.html">Popover</a></li>
-                            <li><a href="./ui-progressbar.html">Progressbar</a></li>
-                            <li><a href="./ui-tab.html">Tab</a></li>
-                            <li><a href="./ui-typography.html">Typography</a></li>
-                            <li><a href="./ui-pagination.html">Pagination</a></li>
-                            <li><a href="./ui-grid.html">Grid</a></li>
+                            <li><a href="./ui-accordion.html">Giao dịch</a></li>
+                            <li><a href="./ui-alert.html">Đơn hàng sản phẩm </a></li>
+                            <li><a href="./ui-badge.html">Doanh số</a></li>
                         </ul>
                     </li>
 
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-plug"></i><span class="nav-text">Plugins</span>
+                            <i class="icon icon-basket"></i><span class="nav-text">Quản lý kho hàng</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./uc-select2.html">Select 2</a></li>
-                            <li><a href="./uc-nestable.html">Nestedable</a></li>
-                            <li><a href="./uc-noui-slider.html">Noui Slider</a></li>
-                            <li><a href="./uc-sweetalert.html">Sweet Alert</a></li>
-                            <li><a href="./uc-toastr.html">Toastr</a></li>
-                            <li><a href="./map-jqvmap.html">Jqv Map</a></li>
+                            <li><a href="./uc-select2.html">Danh sách hàng tồn kho</a></li>
+                            <li><a href="./uc-nestable.html">Danh sách mặt hàng bán chạy</a></li>
+                            <li><a href="./uc-noui-slider.html">Danh sách mặt hàng sắp hết</a></li>
                         </ul>
                     </li>
+                    <li>
+                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                            <i class="icon icon-cart-simple"></i><span class="nav-text">Sản phẩm</span>
+                        </a>
+                        <ul aria-expanded="false">
+                            <li><a href="./uc-select2.html">Sản phẩm</a></li>
+                            <li><a asp-controller="Categories" asp-action="Index" asp-area="Admin">Danh mục</a></li>
+                            <li><a href="./uc-noui-slider.html">Nhà cung cấp</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-label">Content</li>
                     <li>
                         <a href="widget-basic.html" aria-expanded="false">
-                            <i class="icon icon-globe-2"></i><span class="nav-text">Widget</span>
+                            <i class="icon icon-phone-2"></i><span class="nav-text">Liên hệ</span>
                         </a>
                     </li>
-                    <li class="nav-label">Forms</li>
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-form"></i><span class="nav-text">Forms</span>
+                            <i class="icon icon-form"></i><span class="nav-text"> Nội dung</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./form-element.html">Form Elements</a></li>
-                            <li><a href="./form-wizard.html">Wizard</a></li>
-                            <li><a href="./form-editor-summernote.html">Summernote</a></li>
-                            <li><a href="form-pickers.html">Pickers</a></li>
-                            <li><a href="form-validation-jquery.html">Jquery Validate</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-label">Table</li>
-                    <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-layout-25"></i><span class="nav-text">Table</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a href="table-bootstrap-basic.html">Bootstrap</a></li>
-                            <li><a href="table-datatable-basic.html">Datatable</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="nav-label">Extra</li>
-                    <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-single-copy-06"></i><span class="nav-text">Pages</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./page-register.html">Register</a></li>
-                            <li><a href="./page-login.html">Login</a></li>
-                            <li>
-                                <a class="has-arrow" href="javascript:void()" aria-expanded="false">Error</a>
-                                <ul aria-expanded="false">
-                                    <li><a href="./page-error-400.html">Error 400</a></li>
-                                    <li><a href="./page-error-403.html">Error 403</a></li>
-                                    <li><a href="./page-error-404.html">Error 404</a></li>
-                                    <li><a href="./page-error-500.html">Error 500</a></li>
-                                    <li><a href="./page-error-503.html">Error 503</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./page-lock-screen.html">Lock Screen</a></li>
+                            <li><a href="./form-element.html">Slide</a></li>
+                            <li><a href="./form-wizard.html">Tin tức</a></li>
+                            <li><a href="./form-editor-summernote.html">Danh mục tin tức</a></li>
+                            <li><a href="form-pickers.html">ảnh bài viết</a></li>
+                            <li><a href="form-validation-jquery.html">cấu hình website</a></li>
                         </ul>
                     </li>
                 </ul>
+                <hr />
+
+                <div class="copyright">
+                    <p>Copyright © Designed &amp; Developed by <a href="#" target="_blank">Toan Dang</a> 2021</p>
+                </div>
             </div>
         </div>
         <!--**********************************
@@ -340,5 +304,6 @@
     <script src="~/vendor/jquery.counterup/jquery.counterup.min.js"></script>
 
     <script src="~/js/dashboard/dashboard-1.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
