--- a/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Areas/Admin/Views/Categories/Index.cshtml
@@ -18,15 +18,14 @@
                     <h4>Hi, welcome back!</h4>
 
                     <span class="ml-1">
-                        <a asp-action="Create">Create New Database</a>
+                        <a asp-action="Create">Create New Categoy</a>
                     </span>
-
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Table</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Datatable</a></li>
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Sản phẩm</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Danh mục</a></li>
                 </ol>
             </div>
         </div>
@@ -113,7 +112,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
