--- a/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -6,7 +6,8 @@
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
+@*<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>*@
+<p>Bạn đang đăng nhập bằng phương thức bảo mật 2FA. Để đăng nhập, hãy nhập mã 6 chữ số trong trình tạo mã.</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
@@ -32,8 +33,9 @@
     </div>
 </div>
 <p>
-    Don't have access to your authenticator device? You can
-    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+    @*Don't have access to your authenticator device? You can*@
+    Không thể truy cập vào trình tạo mã ? Bạn có thể 
+    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">đăng nhập bằng mã khôi phục@*log in with a recovery code*@</a>.
 </p>
 
 @section Scripts {
