--- a/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Disable2faModel
 @{
-    ViewData["Title"] = "Disable two-factor authentication (2FA)";
+    ViewData["Title"] = "Tắt xác thực 2 lớp (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
