--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -3,9 +3,12 @@
 @{
     ViewData["Title"] = "Xác nhận đăng ký";
 }
-
-<h1>@ViewData["Title"]</h1>
-<p>
-    Một email đã gửi đến cho bạn, bạn cần mở email làm theo hướng dẫn trong email sau đó
-    <a href="@Model.UrlContinue">Bấm vào đây để tiếp tục</a>
-</p>
+<main class="container" style="height: 57vh">
+    <div class="my-lg-3">
+        <h5>@ViewData["Title"]</h5>
+        <p>
+            Một email đã gửi đến cho bạn, bạn cần mở email làm theo hướng dẫn trong email sau đó
+            <a href="@Model.UrlContinue">Bấm vào đây để tiếp tục</a>
+        </p>
+    </div>
+</main>
